...
                Row(
                    verticalAlignment = Alignment.CenterVertically,
                    modifier = Modifier.padding(horizontal = 4.dp),
                ) {
                    Text("⏰", fontWeight = FontWeight.SemiBold, modifier = Modifier.padding(bottom = 4.dp))
                    Spacer(modifier = Modifier.width(2.dp))
                    Text("On Process", fontWeight = FontWeight.SemiBold)
                }
                FlowRow(
                    modifier = Modifier.padding(
                        horizontal = 4.dp,
                        vertical = 4.dp,
                    )
...
                Row(
                    verticalAlignment = Alignment.CenterVertically,
                    modifier = Modifier.padding(horizontal = 4.dp),
                ) {
                    Text("✔️", fontWeight = FontWeight.SemiBold, modifier = Modifier.padding(bottom = 4.dp))
                    Spacer(modifier = Modifier.width(2.dp))
                    Text("Finished", fontWeight = FontWeight.SemiBold)
                }
                FlowRow(
                    modifier = Modifier.padding(
                        horizontal = 4.dp,
                        vertical = 4.dp,
                    )
...
                                        dialogEdit = false
                                    }
                                }
                            }
                        },
                        enabled = !isSubmitting,
                        modifier = Modifier.size(24.dp).testTag("EpisodeCardEditBtn"),
                    ) {
                        Icon(
                            imageVector = if (dialogEdit) Icons.Filled.Done else Icons.Filled.Edit,
                            contentDescription = "Edit",
                        )
                    }
...
