...
import me.naoti.panelapp.ui.theme.NaoTimesTheme
import me.naoti.panelapp.ui.theme.darker


@Composable
fun DeleteDialog(
    title: String = "Are you sure?",
    extraText: String? = null,
    verificationWord: String? = null,
    onDismiss: (() -> Unit)? = null,
    onConfirm: (() -> Unit)? = null,
    enabled: Boolean = true,
) {
...
}

@Preview(showBackground = true)
@Composable
private fun DeleteDialogVerificationPreview() {
    NaoTimesTheme {
        DeleteDialog(verificationWord = "this-is-a-test")
    }
}

@Preview(showBackground = true)
@Composable
private fun DeleteDialogVerificationExtraPreview() {
...
