...
            .border(
                width = 1.75.dp,
                color = colors.border,
                shape = corner
            )
            .clip(corner)
            .testTag("RoleStatusBox")
    ) {
        Text(
            type.getShort(),
            textAlign = TextAlign.Center,
            color = colors.text,
            modifier = Modifier.padding(
...
